<resources>

    <string name="app_name">OSS1</string>
    <string name="hello_world">Γεια σας!</string>
    <string name="menu_settings">Μενού</string>
    <string name="apply_distance">Υπολογισμός απόστασης</string>
    <string name="title">Τίτλος</string>
    <string name="main_app_title">Sfecas Efstathios</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="invalid_data">"Λάθος στοιχεία!"</string>
    <string name="data_from_gps">Δεδομένα από το GPS</string>
    <string name="requested_data">Ζητούμενα προβλήματος</string>
    <string name="settings_title">Τίτλος Ρυθμίσεων</string>
    <string name="app_settings_title">Ρυθμίσεις Προγράμματος</string>
    <string name="logging_level">Επίπεδο καταγραφής</string>
    <string name="logging_level_summary">καταγραφή λαθών, προειδοποιήσεων και debug μηνυμάτων</string>
    <string name="units_summary">επιλογή μονάδων μέτρησης</string>
    <string name="units">Μονάδες</string>
    <string name="distance">Απόσταση</string>
    <string name="initial_orientation">Αρχικός Προσανατολισμός</string>
    <string name="azimuth_orientation">Γωνία Προσανατολισμού (°N)</string>
    <string name="azimuth_orientation_hint">(°N)</string>
    <string name="bearing_point">Σημείο Ενδιαφέροντος</string>
    <string name="bearing_point_azimuth">Γωνία Bearing</string>
    <string name="user_info">Στοιχεία Χρήστη</string>
    <string name="desired_place_info">Στοιχεία Τελικής Θέσεως</string>
    <string name="pace">Ρυθμός</string>
    <string name="not_available">N/A</string>
    <string name="build_date">Ημερομηνία δημιουργίας</string>
    <string name="drive_command">Εντολή κατεύθυνσης</string>
    <string name="drive_straight">Συνεχίστε ευθεία</string>
    <string name="drive_left">Στρίψτε αριστερά</string>
    <string name="drive_right">Στρίψτε δεξιά</string>
    <string name="drive_back">Κάντε αναστροφή</string>
    <string name="speed">Ταχύτητα</string>
    <string name="azimuth">Αζιμούθιο</string>
    <string name="lat">Γεωγραφικό πλάτος</string>
    <string name="lng">Γεωγραφικό μήκος</string>
    <string name="accuracy">Ακρίβεια</string>
    <string name="last_fix">Τελευταία μέτρηση</string>
    <string name="first">Πρώτο</string>
    <string name="second">Δεύτερο</string>
    <string name="third">Τρίτο</string>
    <string name="zero">0</string>
    <string name="default_pace">00:00</string>
    <string name="default_azimuth">0°N</string>
    <string name="default_lat">37.9652</string>
    <string name="default_lng">23.768396</string>
    <string name="default_destination_lat">37.950587</string>
    <string name="default_destination_lng">23.72191</string>
    <string name="default_orientation_lat">37.967884</string>
    <string name="default_orientation_lng">23.697411</string>
    <string name="default_orientation_lng_north">23.697465</string>
    <string name="default_orientation_lat_north">37.968248</string>
    <string name="default_orientation_lng_east">23.697937</string>
    <string name="default_orientation_lat_east">37.967893</string>
    <string name="default_orientation_lng_south">23.697465</string>
    <string name="default_orientation_lat_south">37.967503</string>
    <string name="default_orientation_lng_west">23.696639</string>
    <string name="default_orientation_lat_west">37.967901</string>
    <string name="default_orientation_desc">Πειραιώς 211, Ταύρος</string>
    <string name="default_text"></string>
    <string name="waiting_new_fix">Αναζήτηση νέου σήματος</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="kn">kn</string>
    <string name="kph">km/h</string>
    <string name="mph">mi/h</string>
    <string name="days">μέρες</string>
    <string name="hours">ώρες</string>
    <string name="minutes">λεπτά</string>
    <string name="seconds">δευτερόλεπτα</string>
    <string name="ver">v.</string>
    <string name="ok">OK</string>
    <string name="and">και</string>
    <string name="yes">Ναι</string>
    <string name="no">Οχι</string>
    <string name="cancel">Ακύρωση</string>
    <string name="elevation">Υψόμετρο</string>
    <string name="search_vibration">Δονούμενο σήμα</string>
    <string name="search_sound">Ακουστικό σήμα</string>
    <string name="signal_method">Μέθοδος σήμανσης</string>
    <string name="signal_method_summary">επιλέξτε ανάμεσα σε ηχητική ειδοποίηση είτε δόνηση, κατά την καθοδήγηση προς το σημείο ενδιαφέροντος</string>
    <string name="barcode_scan">Ανάγνωση 2D barcode</string>
    <string name="poi_list">Λίστα αποθηκ\\νων POI</string>
    <string name="description">Περιγραφή</string>
    <string name="poi_description">Περιγραφή σημείου ενδιαφέροντος</string>
    <string name="poi_title_required">Απαιτείται τίτλος</string>
    <string name="poi_updated">Το σημείο ενδιαφέροντος ενημερώθηκε</string>
    <string name="import_completed">Η εισαγωγή ολοκληρώθηκε</string>
    <string name="select_file">Επιλογή αρχείου</string>
    <string name="poi_deleted">Το σημείο ενδιαφέροντος διεγράφη</string>
    <string name="email_subject_poi">Αποστολή του POI με email</string>
    <string name="sending_email">To email αποστέλλεται</string>
    <string name="are_you_sure">Είστε σίγουρος;</string>
    <string name="all_pois_deleted">Όλα τα σημεία ενδιαφέροντος διεγράφησαν</string>
    <string name="import_all">Εισαγωγή όλων</string>
    <string name="show_on_map">Δείξτο στο χάρτη</string>
    <string name="navigate">Προσανατόλισέ με εδώ</string>
    <string name="delete_all">Εκκαθάριση όλων</string>
    <string name="satellite">Δορυφόρος</string>
    <string name="street">Δρόμος</string>
    <string name="poi">Σημείο ενδιαφέροντος</string>
    <string name="edit">Τροποποίηση</string>
    <string name="delete">Διαγραφή</string>
    <string name="show">Εμφάνιση</string>
    <string name="email_to">Αποστολή email σε</string>
    <string name="compass">Πυξίδα</string>
    <string name="compass_summary">Προς τα που θα δείχνει η πυξίδα (πραγματικό ή μαγνητικό βορρά)</string>
    <string name="true_north">Προς πραγματικό βορρά</string>
    <string name="true_north_summary">Η πυξίδα δείχνει στον πραγματικό αντί για το μαγνητικό βορρά (απαιτείται διαμέτρηση)</string>
   	<string name="notification">Ειδοποίηση</string>	
	<string name="poi_taken">Η ανίχνευση οδηγιών προς το σημείο ενδιαφέροντος έχει ξεκινήσει</string>	
   	<string name="gps_screen">Στοιχεία θέσης</string>
   	<string name="find_nearest">Εύρ. κοντινότερου POI</string>
   	<string name="find_next_nearest">Εύρ. επόμενου POI</string>
   	<string name="no_current_poi">Δεν υπάρχει τωρινό σημείο ενδιαφέροντος. Παρακαλώ επιλέξτε κάποιο πρώτα.</string>
   	<string name="no_next_poi">Δεν υπάρχει επόμενο σημείο ενδιαφέροντος.</string>
   	<string name="no_nearest_poi">Δεν υπάρχει πλησιέστερο σημείο ενδιαφέροντος.</string>
	<string name="fail_barcode_read">Αποτυχία ανάγνωσης του barcode. Προσπαθήστε ξανά.</string>
	<string name="no_poi_on_db">Το συγκεκριμένο αναγνωσμένο από το barcode σημείο ενδιαφέροντος δεν υπάρχει στη βάση.</string>
	<string name="vibration_started">Το σήμα δόνησης εκκινήθη.</string>
	<string name="beep_started">Το σήμα ήχου εκκινήθη.</string>
	<string name="articles">Άρθρα.</string>
  	<string name="find_articles">Βρες άρθρα από κοντινά σημεία ενδιαφέροντος.</string>
  	<string name="all_articles_deleted">Ολα τα άρθρα διεγράφησαν.</string>
  	<string name="internet_on">Ιντερνετ ενεργοποιημένο.</string>
  	<string name="internet_off">Ιντερνετ απενεργοποιημένο. Παρακαλώ ενεργοποιήστε το ιντερνετ και προσπαθήστε ξανά.</string>
    <!-- system -->
    <string name="gps_service_not_connected">Η υπηρεσία GPS είναι ακόμη αποσυνδεδεμένη</string>
    <string name="memory_card_not_available">Η κάρτα μνήμης δεν είναι διαθέσιμη</string>
    <string name="memory_card_not_writable">Η κάρτα μνήμης δεν έχει δικαίωμα εγγραφής</string>

</resources>