<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FillParent.Vert"
    android:padding="3dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:text="@string/user_info" >
    </TextView>

    <LinearLayout style="@style/FillWidth.Hor" >

        <TextView
            style="@style/Cell.Label"
            android:text="@string/azimuth_orientation" >
        </TextView>

        <EditText
            android:id="@+id/OrientationAzimuth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/azimuth_orientation_hint"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:maxLength="5"
            android:maxLines="1"
            android:text="@string/zero" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:text="@string/bearing_point" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lat" >
            </TextView>

            <EditText
                android:id="@+id/LatTo2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.,"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/default_orientation_lat_north" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lng" >
            </TextView>

            <EditText
                android:id="@+id/LngTo2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="0123456789.,"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/default_orientation_lng_north" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:text="@string/data_from_gps" >
    </TextView>
   
    <!-- COORDINATES -->

    <LinearLayout style="@style/FillWidth.Hor" >

        <TextView
            style="@style/Cell.Label"
            android:text="@string/lat" >
        </TextView>

        <TextView
            style="@style/Cell.Label"
            android:text="@string/lng" >
        </TextView>
    </LinearLayout>

    <LinearLayout style="@style/FillWidth.Hor" >

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/lat"
                style="@style/WrapContent.Value.Small" >
            </TextView>
        </LinearLayout>

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/lng"
                style="@style/WrapContent.Value.Small" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- ELEVATION & COMPASS -->

    <LinearLayout style="@style/FillWidth.Hor" >

        <TextView
            style="@style/Cell.Label"
            android:text="@string/elevation" >
        </TextView>

        <TextView
            style="@style/Cell.Label"
            android:text="@string/azimuth" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        style="@style/FillWidth.Hor"
        android:layout_height="45dp" >

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/elevation"
                style="@style/WrapContent.Value.Small" >
            </TextView>

            <TextView
                android:id="@+id/elevationUnit"
                style="@style/WrapContent.Value.Unit" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            style="@style/Cell.Column"
            android:baselineAligned="false" >

            <LinearLayout
                style="@style/Cell.Column"
                android:gravity="right" >

                <TextView
                    android:id="@+id/azimuth"
                    style="@style/WrapContent.Value"
                    android:text="@string/not_available" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center" >

                <com.sfecas.AthensTouristGps.view.CompassImage
                    android:id="@+id/compassImage"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/arrow36" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- LAST FIX TIME & ACCURACY -->

    <LinearLayout style="@style/FillWidth.Hor" >

        <TextView
            style="@style/Cell.Label"
            android:text="@string/accuracy" >
        </TextView>

        <TextView
            style="@style/Cell.Label"
            android:text="@string/last_fix" >
        </TextView>
    </LinearLayout>

    <LinearLayout style="@style/FillWidth.Hor" >

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/accuracy"
                style="@style/WrapContent.Value.Small" >
            </TextView>

            <TextView
                android:id="@+id/accuracyUnit"
                style="@style/WrapContent.Value.Unit" >
            </TextView>
        </LinearLayout>

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/lastFix"
                style="@style/WrapContent.Value.Small" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- OUTPUT -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:text="@string/requested_data" >
    </TextView>

    <LinearLayout style="@style/FillWidth.Hor" >

        <TextView
            style="@style/Cell.Label"
            android:text="@string/distance" >
        </TextView>

        <TextView
            style="@style/Cell.Label"
            android:text="@string/bearing_point_azimuth" >
        </TextView>
    </LinearLayout>

    <LinearLayout style="@style/FillWidth.Hor" >

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/distance_value"
                style="@style/WrapContent.Value.Small" >
            </TextView>
        </LinearLayout>

        <LinearLayout style="@style/Cell.Column" >

            <TextView
                android:id="@+id/bearing_azimuth_value"
                style="@style/WrapContent.Value.Small" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>